# smoke_fire_hailo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
app/: main.py
app/cfg/: config.py  default.yaml  development.yaml  logging.py  production.yaml
app/core/: model_manager.py  pipeline.py  process_utils.py  processing.py
app/router/: detection_router.py  device_router.py
app/schema/: detection_schema.py
app/service/: detection_service.py  device_monitor.py
data/zoo/yolov8n_relu6_fire_smoke--640x640_quant_hailort_hailo8_1/: labels_yolov8n_relu6_fire_smoke.json  yolov8n_relu6_fire_smoke--640x640_quant_hailort_hailo8_1.json
device/: device_monitor.py  device_monitor_service.py
test/: onnx_test.py
ui/: ui.py
